# thundertray

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  icon.rs  installer.rs  kwin_script.rs  main.rs  mork.rs  settings_dialog.py  settings_gui.rs  tray.rs  watcher.rs  window.rs
